--- a/style.css
+++ b/style.css
@@ -265,3 +265,33 @@ hr{
     color: black;
     border: 2px solid #1fe8b646;
 }
+
+
+@media only screen and (max-width : 400px ) {
+    
+#infographicSection{
+    
+    display: flex;
+    flex-direction: column ;
+    align-content: center;
+}
+
+.basicInfoTable{
+
+    display:block;
+
+}
+
+#alex{
+
+    width: 50%;
+    height: 50%;
+}
+
+#educationSection div{
+
+    flex-wrap: nowrap;    
+
+}
+
+}
